sort.pancake.lessons.sort.pancake.BubblePancake.scala.error
BubblePancake:17: error: not found: value j
    for(i<- 0 to getTaillePile()-1-j){
                                   ^